[BE] 시큐리티 컨피그 수정